@@ -13,10 +13,10 @@ import java.util.Set;
 
 import org.aopalliance.intercept.Interceptor;
 import org.aopalliance.intercept.MethodInterceptor;
-
 import org.springframework.aop.Advisor;
 import org.springframework.aop.InterceptionAroundAdvisor;
 import org.springframework.aop.InterceptionIntroductionAdvisor;
+import org.springframework.aop.IntroductionAdvisor;
 import org.springframework.aop.IntroductionInterceptor;
 import org.springframework.aop.MethodBeforeAdvice;
 import org.springframework.aop.Pointcut;
@@ -37,7 +37,7 @@ import org.springframework.util.StringUtils;
  * and Advisors, but doesn't actually implement AOP proxies.
  *
  * @author Rod Johnson
- * @version $Id: AdvisedSupport.java,v 1.21 2003-12-19 11:54:59 jhoeller Exp $
+ * @version $Id: AdvisedSupport.java,v 1.22 2004-01-21 20:21:35 johnsonr Exp $
  * @see org.springframework.aop.framework.AopProxy
  */
 public class AdvisedSupport extends ProxyConfig implements Advised {
@@ -216,7 +216,7 @@ public class AdvisedSupport extends ProxyConfig implements Advised {
 		addAdvisor(new DefaultThrowsAdvisor(throwsAdvice));
 	}
 
-	// TODO what about removing a ProxyInterceptor?
+
 	public final boolean removeInterceptor(Interceptor interceptor) {
 		boolean removed = false;
 		for (int i = 0; i < this.advisors.size() && !removed; i++) {
@@ -291,23 +291,14 @@ public class AdvisedSupport extends ProxyConfig implements Advised {
 		adviceChanged();
 	}
 	
-	public void addAdvisor(int pos, InterceptionIntroductionAdvisor advice) throws AopConfigException {
-		// Check interfaces before changing anything in object state
-		for (int i = 0; i < advice.getInterfaces().length; i++) {
-			if (!advice.getInterfaces()[i].isInterface()) {
-				throw new AopConfigException("Class '" + advice.getInterfaces()[i].getName() + "' is not an interface; cannot be used in an introduction");
-			}
-			 if (!advice.getIntroductionInterceptor().implementsInterface(advice.getInterfaces()[i])) {
-			 	throw new AopConfigException("IntroductionInterceptor [" + advice.getIntroductionInterceptor() + "] " +
-			 			"does not implement interface '" + advice.getInterfaces()[i].getName() + "' specified in introduction advice");
-			 }
-		 }
+	public void addAdvisor(int pos, IntroductionAdvisor advisor) throws AopConfigException {
+		advisor.validateInterfaces();
 		
-		// If we passed that we can make the change	 
-		for (int i = 0; i < advice.getInterfaces().length; i++) {
-			 addInterface(advice.getInterfaces()[i]);
+		// If the advisor passed validation we can make the change	 
+		for (int i = 0; i < advisor.getInterfaces().length; i++) {
+			 addInterface(advisor.getInterfaces()[i]);
 		 }
-		addAdvisorInternal(pos, advice);
+		addAdvisorInternal(pos, advisor);
 	}
 
 	public void addAdvisor(int pos, Advisor advisor) {
