@@ -17,19 +17,19 @@ import org.springframework.aop.framework.AopConfigException;
  * Simple IntroductionAdvisor implementation that by default applies to any class.
  * @author Rod Johnson
  * @since 11-Nov-2003
- * @version $Id: SimpleIntroductionAdvisor.java,v 1.1 2003-12-02 22:28:10 johnsonr Exp $
+ * @version $Id: DefaultInterceptionIntroductionAdvisor.java,v 1.1 2004-01-21 20:21:35 johnsonr Exp $
  */
-public class SimpleIntroductionAdvisor implements InterceptionIntroductionAdvisor, ClassFilter {
+public class DefaultInterceptionIntroductionAdvisor implements InterceptionIntroductionAdvisor, ClassFilter {
 	
 	private IntroductionInterceptor interceptor;
 	
 	private Set interfaces = new HashSet();
 	
-	public SimpleIntroductionAdvisor(IntroductionInterceptor interceptor) {
+	public DefaultInterceptionIntroductionAdvisor(IntroductionInterceptor interceptor) {
 		this.interceptor = interceptor;
 	}
 	
-	public SimpleIntroductionAdvisor(IntroductionInterceptor interceptor, Class clazz) throws AopConfigException {
+	public DefaultInterceptionIntroductionAdvisor(IntroductionInterceptor interceptor, Class clazz) throws AopConfigException {
 		this(interceptor);
 		addInterface(clazz);
 	}
@@ -37,7 +37,7 @@ public class SimpleIntroductionAdvisor implements InterceptionIntroductionAdviso
 	/**
 	 * Wrap this interceptor and introduce all interfaces.
 	 */
-	public SimpleIntroductionAdvisor(DelegatingIntroductionInterceptor dii) {
+	public DefaultInterceptionIntroductionAdvisor(DelegatingIntroductionInterceptor dii) {
 		this((IntroductionInterceptor) dii);
 		for (int i = 0; i < dii.getIntroducedInterfaces().length; i++) {
 			Class intf = dii.getIntroducedInterfaces()[i];
@@ -70,6 +70,18 @@ public class SimpleIntroductionAdvisor implements InterceptionIntroductionAdviso
 	 */
 	public boolean isPerInstance() {
 		return true;
+	}
+	
+	public void validateInterfaces() throws AopConfigException {
+		 for (int i = 0; i < getInterfaces().length; i++) {
+			 if (!getInterfaces()[i].isInterface()) {
+				 throw new AopConfigException("Class '" + getInterfaces()[i].getName() + "' is not an interface; cannot be used in an introduction");
+			 }
+			  if (!getIntroductionInterceptor().implementsInterface(getInterfaces()[i])) {
+				 throw new AopConfigException("IntroductionInterceptor [" + getIntroductionInterceptor() + "] " +
+						 "does not implement interface '" + getInterfaces()[i].getName() + "' specified in introduction advice");
+			  }
+		  }
 	}
 
 }
