@@ -6,14 +6,14 @@
 package org.springframework.aop.framework;
 
 import org.springframework.aop.support.DelegatingIntroductionInterceptor;
-import org.springframework.aop.support.SimpleIntroductionAdvisor;
+import org.springframework.aop.support.DefaultInterceptionIntroductionAdvisor;
 
 /**
  * 
  * @author Rod Johnson
- * @version $Id: TimestampIntroductionAdvisor.java,v 1.1 2003-12-09 16:43:30 johnsonr Exp $
+ * @version $Id: TimestampIntroductionAdvisor.java,v 1.2 2004-01-21 20:21:34 johnsonr Exp $
  */
-public class TimestampIntroductionAdvisor extends SimpleIntroductionAdvisor {
+public class TimestampIntroductionAdvisor extends DefaultInterceptionIntroductionAdvisor {
 
 	/**
 	 * @param dii
